--- a/themes/SuiteP/css/bootstrap/alerts.scss
+++ b/themes/SuiteP/css/bootstrap/alerts.scss
@@ -61,7 +61,7 @@
 }
 
 .alert-info {
-  @include alert-variant($alert-info-bg, $alert-info-border, $alert-info-text);
+  @include alert-variant($alert-info-bg, $alert-info-border, $alert-info-text-1);
 }
 
 .alert-warning {
