--- a/themes/SuiteP/css/bootstrap/list-group.scss
+++ b/themes/SuiteP/css/bootstrap/list-group.scss
@@ -111,7 +111,7 @@ button.list-group-item {
 // Organizationally, this must come after the `:hover` states.
 
 @include list-group-item-variant(success, $state-success-bg, $state-success-text);
-@include list-group-item-variant(info, $state-info-bg, $state-info-text);
+@include list-group-item-variant(info, $state-info-bg, $state-info-text-3);
 @include list-group-item-variant(warning, $state-warning-bg, $state-warning-text);
 @include list-group-item-variant(danger, $state-danger-bg, $state-danger-text);
 
