--- a/themes/SuiteP/css/bootstrap/type.scss
+++ b/themes/SuiteP/css/bootstrap/type.scss
@@ -107,7 +107,7 @@ mark,
 
 @include text-emphasis-variant('.text-success', $state-success-text);
 
-@include text-emphasis-variant('.text-info', $state-info-text);
+@include text-emphasis-variant('.text-info', $state-info-text-4);
 
 @include text-emphasis-variant('.text-warning', $state-warning-text);
 
