--- a/themes/SuiteP/css/suitep-base/yui.scss
+++ b/themes/SuiteP/css/suitep-base/yui.scss
@@ -4052,7 +4052,7 @@ a.yuimenuitemlabel:hover {
 
 .yui-resize-status {
   background-color: $alert-info-bg;
-  color: $alert-info-text;
+  color: $alert-info-text-7;
   border: 1px solid $alert-info-bg;
   border-top: 1px solid $alert-info-bg;
 }
